<resources>
    <string name="app_name">Refamovil</string>
    <string name="toolbartitle">REFAMOVIL</string>
    <string name="bienvenida">¡Bienvenido de nuevo!</string>
    <string name="usuario">Usuario</string>
    <string name="psswd">Contraseña</string>
    <string name="btnEntrar">ENTRAR</string>
    <string name="account">¿No Tienes Cuenta?</string>
    <string name="new_Account">Crear Cuenta Nueva</string>
    <string name="Registrar">Regístrate</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Correo Electronico</string>
    <string name="haveAccount">¿Ya tienes cuenta?</string>
    <string name="login">Inicia Sesión</string>

    <string name="open_nav">Open Navigation Bar</string>
    <string name="close_nav">Close Navigation Bar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fragment_nuestras_sucursales">fragment_nuestras_sucursales</string>

    <string name="logout">Logout</string>
    <string name="miscompras">Mis Compras</string>
    <string name="footerCompras">¡Gracias por comprar con nosotros!</string>

</resources>